--- a/css/style.css
+++ b/css/style.css
@@ -2376,7 +2376,7 @@ section#about-us.aboutus {
     top: 23px;
     width: 240px;
     height: 240px;
-    background-image: url(../images/rsvp/f1.png);
+    background-image: url(../images/f1.png);
     background-size: 100%;
     background-repeat: no-repeat;
     transform: rotate(320deg)
@@ -2519,7 +2519,7 @@ section#about-us.aboutus {
     top: -40px;
     width: 270px;
     height: 270px;
-    background-image: url(../images/rsvp/f1.png);
+    background-image: url(../images/f1.png);
     background-size: 100%;
     background-repeat: no-repeat;
     transform: rotate(140deg)
@@ -2532,7 +2532,8 @@ section#about-us.aboutus {
     top: -36px;
     border-radius: 50%;
     height: 300px;
-    width: 300px
+    width: 300px;
+    object-fit: cover;
 }
 
 @media(max-width:1100px) {
@@ -2809,7 +2810,7 @@ section.section-padding.our-story {
     position: absolute;
     top: -45px;
     right: -6px;
-    background-image: url(../images/rsvp/f1.png);
+    background-image: url(../images/f1.png);
     width: 50%;
     height: 40%;
     background-repeat: no-repeat;
@@ -2823,7 +2824,7 @@ section.section-padding.our-story {
     left: -22px;
     height: 40%;
     width: 45%;
-    background-image: url(../images/rsvp/f2.png);
+    background-image: url(../images/f2.png);
     background-repeat: no-repeat;
     background-size: 100%;
     transform: rotate(0);
@@ -5358,7 +5359,7 @@ ul.insta-info-list {
 
 .footer-note:before {
     content: "";
-    background: url(../images/footer/footer-c.png);
+    background: url(../images/footer-c.png);
     position: absolute;
     top: 50%;
     left: 50%;
