--- a/css/style.css
+++ b/css/style.css
@@ -1342,7 +1342,7 @@ header#inner-navigation {
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url(../images/body/fancy.png);
+    background-image: url(../images/img/fancy.png);
     background-repeat: no-repeat;
     background-size: 100%;
     width: 17%;
@@ -1354,7 +1354,7 @@ header#inner-navigation {
     position: absolute;
     bottom: -20px;
     left: 80%;
-    background-image: url(../images/body/fancy-1.png);
+    background-image: url(../images/img/fancy-1.png);
     background-repeat: no-repeat;
     background-size: 100%;
     width: 17%;
@@ -1966,7 +1966,7 @@ header#inner-navigation {
 }
 
 .home-2 .quote-img img,
-.home-3 .quote-img img {
+.home-3 .quote-img img.ic-main {
     border: 10px solid #fbfbfb
 }
 
@@ -2525,7 +2525,7 @@ section#about-us.aboutus {
     transform: rotate(140deg)
 }
 
-.quote-img img {
+.quote-img img.ic-main {
     border: 10px solid #f8f8f8;
     position: absolute;
     left: 130px;
@@ -2537,7 +2537,7 @@ section#about-us.aboutus {
 }
 
 @media(max-width:1100px) {
-    .quote-img img {
+    .quote-img img.ic-main {
         width: 250px;
         height: 250px
     }
@@ -5368,7 +5368,19 @@ ul.insta-info-list {
     height: 85%;
     background-repeat: no-repeat;
     background-size: 100%;
-transform: translate(-50%, -50%);
+    transform:  translate(-50%, -50%) scale(0.85) ;
+    animation: transformX infinite 1s;
+}
+@keyframes transformX {
+    0%{
+        transform: translate(-50%, -50%) scale(0.85) ;
+    }
+    50%{
+        transform: translate(-50%, -50%) scale(1);
+    }
+    100%{
+        transform: translate(-50%, -50%) scale(0.85);
+    }
 }
 
 .footer-note h1 {
