--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a:focus {
 }
 
 a:hover {
-    color: #ec2328
+    color: #e14456
 }
 
 a:focus,
@@ -179,7 +179,7 @@ label {
     top: 0;
     width: 50px;
     height: 80px;
-    background: #ec2328;
+    background: #e14456;
     border-radius: 50px 50px 0 0;
     -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
@@ -333,7 +333,7 @@ label {
     height: 32px;
     position: absolute;
     z-index: 1;
-    background: #ec2328
+    background: #e14456
 }
 
 .section-title h2:before {
@@ -346,7 +346,7 @@ label {
     margin: 0 auto;
     text-align: center;
     top: 95px;
-    color: #ec2328
+    color: #e14456
 }
 
 @media(max-width:320px) {
@@ -366,7 +366,7 @@ label {
 }
 
 .section-background:before {
-    background-color: #ec2328;
+    background-color: #e14456;
     z-index: 0;
     content: "";
     position: absolute;
@@ -387,7 +387,7 @@ label {
 }
 
 a.btn.btn-normal {
-    background-color: #ec2328;
+    background-color: #e14456;
     color: #fff;
     padding: 8px 16px;
     border-style: solid;
@@ -529,7 +529,7 @@ header#inner-navigation {
 .navbar.navbar-default .navbar-collapse ul.nav.navbar-nav li.active a,
 .navbar.navbar-default .navbar-collapse ul.nav.navbar-nav li a:hover {
     background: 0 0;
-    color: #ec2328 !important;
+    color: #e14456 !important;
     transition: all ease-in-out .5s
 }
 
@@ -607,8 +607,8 @@ header#inner-navigation {
 
 @media only screen and (max-width:767px) {
     .navbar.navbar-default .navbar-toggle {
-        border-color: #ec2328;
-        background-color: #ec2328;
+        border-color: #e14456;
+        background-color: #e14456;
         margin-top: 10px;
         margin-right: 0
     }
@@ -627,7 +627,7 @@ header#inner-navigation {
     }
 
     .navbar.navbar-default .navbar-toggle:hover .icon-bar {
-        background-color: #ec2328
+        background-color: #e14456
     }
 
     .navbar.navbar-default .navbar-collapse {
@@ -764,7 +764,7 @@ header#inner-navigation {
 
 #inner-navigation .nav.navbar-nav li a:hover,
 #inner-navigation .nav.navbar-nav li.active>a {
-    color: #ec2328 !important;
+    color: #e14456 !important;
     text-decoration: none;
     background: 0 0
 }
@@ -784,8 +784,8 @@ header#inner-navigation {
     display: none;
     background-color: #f7f7f7;
     border: 1px solid #eee;
-    border-left: 2px solid #ec2328;
-    border-right: 2px solid #ec2328;
+    border-left: 2px solid #e14456;
+    border-right: 2px solid #e14456;
     -webkit-box-shadow: 0 0 12px -3px rgba(0, 0, 0, .4);
     -moz-box-shadow: 0 0 12px -3px rgba(0, 0, 0, .4);
     box-shadow: 0 0 12px -3px rgba(0, 0, 0, .4)
@@ -825,7 +825,7 @@ header#inner-navigation {
 .nav.navbar-nav li ul li ul li:hover a {
     padding-left: 25px;
     padding-right: 15px;
-    color: #ec2328
+    color: #e14456
 }
 
 #inner-navigation .nav.navbar-nav li ul li ul {
@@ -955,7 +955,7 @@ header#inner-navigation {
 
     .sticky .slicknav_btn.slicknav_open:before,
     .sticky .slicknav_btn.slicknav_collapsed:before {
-        color: #ec2328
+        color: #e14456
     }
 
     #inner-navigation .transparent-header .navbar-sticky-in {
@@ -975,12 +975,12 @@ header#inner-navigation {
     #inner-navigation .slicknav_btn.slicknav_open:before,
     .slicknav_btn.slicknav_collapsed:before {
         font-size: 21px;
-        color: #ec2328
+        color: #e14456
     }
 
     .home-2 #inner-navigation .slicknav_btn.slicknav_open:before,
     .home-2 .slicknav_btn.slicknav_collapsed:before {
-        color: #ec2328
+        color: #e14456
     }
 }
 
@@ -1023,7 +1023,7 @@ header#inner-navigation {
 }
 
 .slider-title h1 span {
-    color: #ec2328
+    color: #e14456
 }
 
 .slider-title p {
@@ -1060,7 +1060,7 @@ header#inner-navigation {
 }
 
 .owl-nav div:hover.owl-next {
-    color: #ec2328
+    color: #e14456
 }
 
 .owl-nav div.owl-prev {
@@ -1072,7 +1072,7 @@ header#inner-navigation {
 }
 
 .owl-nav div:hover.owl-prev {
-    color: #ec2328
+    color: #e14456
 }
 
 .owl-carousel .owl-nav .owl-next i,
@@ -1100,7 +1100,7 @@ header#inner-navigation {
 }
 
 .slider-active.owl-carousel .owl-dot.active span {
-    background: #ec2328
+    background: #e14456
 }
 
 .owl-theme .owl-nav [class*=owl-]:hover {
@@ -1125,7 +1125,7 @@ header#inner-navigation {
 }
 
 .coundown-title span {
-    color: #ec2328
+    color: #e14456
 }
 
 .coundown-subtitle {
@@ -1218,7 +1218,7 @@ header#inner-navigation {
 }
 
 .breadcumb-bg-1::after {
-    background: linear-gradient(0deg, #EC2328 -30%, #000000 30%);
+    background: linear-gradient(0deg, #e14456 -30%, #000000 30%);
     opacity: .4
 }
 
@@ -1330,7 +1330,8 @@ header#inner-navigation {
     margin: 0 auto;
     position: absolute;
     text-align: center;
-    top: 34%;
+    /* top: 34%; */
+    top: 55%;
     width: 50%;
     height: auto;
     padding: 10px 0;
@@ -1353,7 +1354,7 @@ header#inner-navigation {
     content: "";
     position: absolute;
     bottom: -20px;
-    left: 80%;
+    left: 82%;
     background-image: url(../images/img/fancy-1.png);
     background-repeat: no-repeat;
     background-size: 100%;
@@ -1379,7 +1380,7 @@ header#inner-navigation {
 }
 
 #wd-banner .swiper-pagination-bullet-active {
-    background: #ec2328
+    background: #e14456
 }
 
 .home-1 #wd-banner .swiper-container-horizontal>.swiper-pagination-bullets,
@@ -1405,7 +1406,7 @@ header#inner-navigation {
     height: 0;
     left: calc(25% - 1px);
     opacity: .8;
-    background-color: #ec2328;
+    background-color: #e14456;
     animation: animate-line-3 8s ease-in-out infinite;
     -moz-animation: animate-line-3 8s ease-in-out infinite;
     -webkit-animation: animate-line-3 8s ease-in-out infinite;
@@ -1415,7 +1416,7 @@ header#inner-navigation {
 
 .heart-arrow span,
 .heart-arrow2 span {
-    color: #ec2328
+    color: #e14456
 }
 
 .heart-arrow1 span {
@@ -1582,7 +1583,7 @@ header#inner-navigation {
 #wd-banner .banner_caption_text p {
     display: inline-block;
     font-size: 16px;
-    background: #ec2328;
+    background: #e14456;
     color: #fff;
     font-weight: 600;
     padding: 12px 35px;
@@ -1847,7 +1848,7 @@ header#inner-navigation {
 }
 
 .top-contact ul>li>a:hover {
-    color: #ec2328
+    color: #e14456
 }
 
 .top-contact ul li i.fa {
@@ -1881,8 +1882,8 @@ header#inner-navigation {
 }
 
 .social-link-t ul li a:hover {
-    color: #ec2328;
-    border: 1px solid #ec2328;
+    color: #e14456;
+    border: 1px solid #e14456;
     transition: all ease-in-out .3s
 }
 
@@ -1952,7 +1953,7 @@ header#inner-navigation {
 
 .wd-slide .ps_indicators_txt_icon>.carousel-indicators .active {
     border-bottom: none;
-    color: #ec2328;
+    color: #e14456;
     width: auto
 }
 
@@ -2022,8 +2023,8 @@ header#inner-navigation {
 }
 
 .home-3 .social-link-t ul li a:hover {
-    color: #ec2328;
-    border: 1px solid #ec2328;
+    color: #e14456;
+    border: 1px solid #e14456;
     transition: all ease-in-out .3s
 }
 
@@ -2066,7 +2067,7 @@ header#inner-navigation {
 }
 
 .section-title h2 span {
-    color: #ec2328
+    color: #e14456
 }
 
 .about-text p {
@@ -2282,13 +2283,13 @@ header#inner-navigation {
 }
 
 .cp-social li:hover {
-    background: #ec2328;
+    background: #e14456;
     color: #fff;
     transition: all .3s ease-in-out
 }
 
 .cp-social li a {
-    color: #ec2328;
+    color: #e14456;
     font-size: 16px;
     padding: 8px;
     line-height: 30px;
@@ -2342,10 +2343,11 @@ section#about-us.aboutus {
 .the-countdown {
     position: relative;
     overflow: hidden;
+    margin-top: 60px;
 }
 
 @media(max-width:767px) {
-	.the-countdown,.the-quote, .footer-widgets {background-attachment:initial!important;background-position:top!important;}
+	.the-countdown,.the-quote {background-attachment:initial!important;background-position:top!important;}
 }
 
 .the-countdown:before {
@@ -2691,9 +2693,9 @@ section#our-story {
     right: -30px;
     width: 2px;
     height: 250px;
-    /*background: #ec2328;*/
+    /*background: #e14456;*/
     /*border-radius: 50%*/
-    border-right: 2px dashed #ec2328;
+    border-right: 2px dashed #e14456;
 }
 
 .story-rt .expand-story .story-head:before {
@@ -2889,8 +2891,8 @@ section.section-padding.our-story {
 
 .event-stack a.read-btn:hover {
     background: 0 0;
-    color: #ec2328;
-    border-color: #ec2328
+    color: #e14456;
+    border-color: #e14456
 }
 
 .event-stack a.read-btn:hover i.fa {
@@ -2961,22 +2963,22 @@ section.section-padding.our-story {
 }
 
 .important-people ul.nav-tabs li a:hover {
-    background: #ec2328;
+    background: #e14456;
     color: #fbfbfb;
-    border-color: #ec2328;
+    border-color: #e14456;
     transition: all ease-in-out .3s
 }
 
 .important-people ul.nav-tabs li.active a {
     color: #fbfbfb;
-    background: #ec2328;
-    border: 1px solid #ec2328
+    background: #e14456;
+    border: 1px solid #e14456
 }
 
 .nav-tabs>li.active>a:hover,
 .nav-tabs>li.active>a,
 .nav-tabs>li.active>a:focus {
-    border: 1px solid #ec2328
+    border: 1px solid #e14456
 }
 
 .our-team {
@@ -3073,13 +3075,13 @@ section.section-padding.our-story {
     font-size: 16px;
     color: #fbfbfb;
     margin: 0 3px;
-    background: #ec2328e6
+    background: #e14456e6
 }
 
 .our-team .link a:hover {
-    background: #ec2328;
+    background: #e14456;
     color: #fff;
-    border-color: #ec2328
+    border-color: #e14456
 }
 
 .our-team .team-content {
@@ -3189,17 +3191,17 @@ ul.gallery li {
 
 ul.gallery li:hover {
     color: #fff;
-    border: 1px solid #ec2328;
+    border: 1px solid #e14456;
     -webkit-transition: .3s;
     transition: .3s;
-    background: #ec2328
+    background: #e14456
 }
 
 ul.gallery li.active {
     border: none;
     color: #fff;
-    border: 1px solid #ec2328;
-    background: #ec2328
+    border: 1px solid #e14456;
+    background: #e14456
 }
 
 .gallery .item {
@@ -3248,7 +3250,7 @@ ul.gallery li.active {
     line-height: 43px;
     border-radius: 50%;
     z-index: 4;
-    background: #ec2328de;
+    background: #e14456de;
     -webkit-transition: all ease-in-out .3s;
     -moz-transition: all ease-in-out .3s;
     -o-transition: all ease-in-out .3s;
@@ -3321,8 +3323,8 @@ ul.gallery li.active {
 
 .btn {
     background: #fbfbfb;
-    color: #ec2328;
-    border-color: #ec2328;
+    color: #e14456;
+    border-color: #e14456;
     border-radius: 3px;
     padding: 10px 25px;
     margin: 15px;
@@ -3330,13 +3332,13 @@ ul.gallery li.active {
 }
 
 .btn:hover {
-    background: #ec2328;
+    background: #e14456;
     color: white;
-    border: 1px solid #ec2328
+    border: 1px solid #e14456
 }
 
 .btn_red {
-    background: #ec2328;
+    background: #e14456;
     color: #fff;
     border: none;
     padding: 8px 25px;
@@ -3346,7 +3348,7 @@ ul.gallery li.active {
     display: inline-block;
     line-height: 1.5;
     font-style: italic;
-    border: 1px solid #ec2328
+    border: 1px solid #e14456
 }
 
 .btn_red:hover {
@@ -3370,7 +3372,7 @@ ul.gallery li.active {
 }
 
 .rt-product-wrapper:hover {
-    border-bottom-color: #ec2328;
+    border-bottom-color: #e14456;
     transition: all .5s
 }
 
@@ -3414,7 +3416,7 @@ ul.gallery li.active {
 
 .product-categories,
 .product-categories a {
-    color: #ec2328a3
+    color: #e14456a3
 }
 
 h3.product_title {
@@ -3721,7 +3723,7 @@ input.quantity-input {
     font-weight: 400;
     font-size: 10px;
     border-radius: 100%;
-    background-color: #ec2328;
+    background-color: #e14456;
     color: #fff;
     width: 14px;
     height: 14px;
@@ -3848,7 +3850,7 @@ input.quantity-input {
     padding: 5px 20px;
     font-size: 13px;
     letter-spacing: 0;
-    background-color: #ec2328;
+    background-color: #e14456;
     text-align: center;
     box-sizing: border-box;
     -webkit-transition: color .2s ease-out, background-color .2s ease-out;
@@ -3998,9 +4000,9 @@ table.shop_table.rt-checkout-review-order-table tr.order-total {
 }
 
 .cart-table-list table td.actions .coupon button.update_cart {
-    background: #ec2328;
+    background: #e14456;
     color: #fff;
-    border-color: #ec2328
+    border-color: #e14456
 }
 
 .cart-table-list table td.actions .button {
@@ -4145,7 +4147,7 @@ p.lt-pswrd {
 }
 
 .blog-col h4 a:hover {
-    color: #ec2328;
+    color: #e14456;
     transition: all ease-in-out .3s
 }
 
@@ -4156,8 +4158,8 @@ p.lt-pswrd {
 
 .blog-content a.read-btn:hover,
 .post_button_wrapper a.read-btn:hover {
-    color: #ec2328;
-    border-color: #ec2328;
+    color: #e14456;
+    border-color: #e14456;
     background: 0 0
 }
 
@@ -4234,7 +4236,7 @@ h4.widgettitle {
     font-weight: 900;
     letter-spacing: 1px;
     color: #fff;
-    background: #ec2328;
+    background: #e14456;
     width: 100%;
     padding: 12px 10px;
     margin-bottom: 25px
@@ -4267,7 +4269,7 @@ h4.widgettitle {
 }
 
 .search-container form:hover button {
-    color: #ec2328;
+    color: #e14456;
     transition: all ease-in-out .3s
 }
 
@@ -4293,8 +4295,8 @@ h4.widgettitle {
 }
 
 .royalwedding_tags ul li a:hover {
-    color: #ec2328;
-    border-color: #ec2328;
+    color: #e14456;
+    border-color: #e14456;
     background: #fbfbfb;
     transition: all ease-in-out .3s
 }
@@ -4342,7 +4344,7 @@ h4.widgettitle {
 .bl-content .posts.blog li a:hover,
 .page_content_wrapper .posts.blog li a:hover,
 .bl_post_header .post_header_title a:hover {
-    color: #ec2328;
+    color: #e14456;
     transition: all ease-in-out .3s
 }
 
@@ -4374,8 +4376,8 @@ h4.widgettitle {
 .mc4wp-form-fields input[type=submit],
 .form-submit input[type=submit],
 .cmt-btn a {
-    background: #ec2328;
-    border: 1px solid #ec2328;
+    background: #e14456;
+    border: 1px solid #e14456;
     color: #fff;
     width: inherit;
     display: inline-block;
@@ -4394,9 +4396,9 @@ h4.widgettitle {
 .mc4wp-form-fields input[type=submit]:hover,
 .form-submit input[type=submit]:hover,
 .cmt-btn a:hover {
-    color: #ec2328;
+    color: #e14456;
     background: 0 0;
-    border-color: #ec2328;
+    border-color: #e14456;
     transition: all ease-in-out .5s
 }
 
@@ -4550,7 +4552,7 @@ li.royalwedding_Instagram ul.flickr {
 
 .blog_date_infos ul li {
     color: #fff;
-    background: #ec2328;
+    background: #e14456;
     padding: 10px 4px 14px;
     line-height: 15px;
     font-size: 20px;
@@ -4645,13 +4647,13 @@ li.royalwedding_Instagram ul.flickr {
 }
 
 .pagination a.inactive:hover {
-    background: #ec2328;
+    background: #e14456;
     color: #fff;
     transition: all ease-in-out .3s
 }
 
 .pagination span {
-    background-color: #ec2328;
+    background-color: #e14456;
     color: #fff
 }
 
@@ -4804,12 +4806,12 @@ ul.comments-item li li li:last-child {
 .comments-item a.comment-reply {
     float: right;
     font-size: 16px;
-    color: #ec2328;
+    color: #e14456;
     line-height: 1;
     width: 30px;
     height: 30px;
     padding: 6px;
-    border: 1px solid #ec2328;
+    border: 1px solid #e14456;
     border-radius: 30px;
     -webkit-transition: all .3s;
     transition: all .3s;
@@ -4817,7 +4819,7 @@ ul.comments-item li li li:last-child {
 }
 
 .comments-item a.comment-reply:hover {
-    background: #ec2328;
+    background: #e14456;
     color: #fbfbfb;
     -webkit-transition: all .3s;
     transition: all .3s
@@ -4926,8 +4928,8 @@ ul.comments-item ul {
 }
 
 .blog-tags a:hover {
-    background: #ec2328;
-    border-color: #ec2328;
+    background: #e14456;
+    border-color: #e14456;
     color: #fbfbfb;
     transition: all .3s
 }
@@ -4959,7 +4961,7 @@ button.open-btn {
 }
 
 button.open-btn:hover {
-    color: #ec2328;
+    color: #e14456;
     transition: all .3s ease 0s
 }
 
@@ -4983,7 +4985,7 @@ a.read-btn {
 
 a.read-btn:hover {
     color: #666;
-    background: #ec2328
+    background: #e14456
 }
 
 .read-btn i.fa {
@@ -4997,7 +4999,7 @@ a.read-btn:hover {
 }
 
 .subscribe-area {
-    background: #ec2328;
+    background: #e14456;
     bottom: -45px;
     left: 0;
     margin: 0 auto;
@@ -5119,6 +5121,9 @@ a.read-btn:hover {
     .owl-registry .owl-nav button {
         top: 28%
     }
+    .event-image{
+        width: 100%;
+    }
 }
 
 .rsvp {
@@ -5163,7 +5168,7 @@ a.read-btn:hover {
 }
 
 .widget-rsvp .widget-title:after {
-    background: #ec2328;
+    background: #e14456;
     content: "";
     left: 0;
     right: 0;
@@ -5254,23 +5259,23 @@ textarea.form-control {
     transition: all .5s;
     text-transform: uppercase;
     padding: 8px 25px;
-    border-color: #ec2328;
-    background-color: #ec2328;
+    border-color: #e14456;
+    background-color: #e14456;
     color: white;
 }
 
 .ft-about-content form button.btn:hover {
-    /*border-color: #ec2328;*/
+    /*border-color: #e14456;*/
     /*background: white;*/
-    /*color: #ec2328;*/
+    /*color: #e14456;*/
 }
 
 button.btn:hover,
 .btn-info:active:hover,
 .btn-info.focus,
 .btn-info:focus {
-    border: 1px solid #ec2328;
-    color: #ec2328;
+    border: 1px solid #e14456;
+    color: #e14456;
     background-color: #fbfbfb;
     transition: all ease-in-out .3s
 }
@@ -5290,7 +5295,7 @@ button.btn:hover,
 }
 
 .rsvp-copyright a {
-    color: #ec2328
+    color: #e14456
 }
 
 .ft-about-content p {
@@ -5406,7 +5411,7 @@ ul.insta-info-list {
     line-height: 1.5;
     text-align: center;
     z-index: 1;
-    display: inline-block;
+    /* display: inline-block; */
     width: 100%
 }
 
@@ -5441,7 +5446,7 @@ ul.insta-info-list {
 }
 
 .footer-copyright a {
-    color: #ec2328
+    color: #e14456
 }
 
 .footer-copyright p {
@@ -5580,10 +5585,10 @@ ul.insta-info-list {
     right: 20px;
     width: 40px;
     height: 40px;
-    color: #ec2328;
+    color: #e14456;
     background: #ffffffe0;
     cursor: pointer;
-    border: 1px solid #ec2328;
+    border: 1px solid #e14456;
     text-align: center;
     font-size: 24px;
     line-height: 36px;
@@ -5699,7 +5704,10 @@ ul.insta-info-list {
     /*margin-left: auto;*/
 
 }
-.event-stack a{display:block;}
+.event-stack a{display:block;color: #e14456;}
+.event-stack a i{
+    margin-left: 4px;
+}
 
 .section-accessibilities{background: #ffe2e5;padding:0;}
 .section-accessibilities .btn-container{margin-top: 20px;margin-bottom: 30px;}
@@ -5732,10 +5740,10 @@ ul.insta-info-list {
     font-family: inherit!important;
     padding: 0px;
     margin: 0;
-    color: #ec2328;
+    color: #e14456;
     background-color: transparent;
     font-weight: 400;
-    border: 1px solid #ec2328;
+    border: 1px solid #e14456;
     padding: 5px 20px;
 }
 
@@ -5827,4 +5835,26 @@ ul.insta-info-list {
 }
 .image-story img {
     width: 100%;
+}
+
+@media (max-width: 576px) {
+    .section-padding{
+        padding: 25px 0;
+    }
+    .section-title h2{
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+    .story-head h3{
+        font-size: 20px;
+    }
+    .section-title h2:before{
+        top: 75px;
+    }
+    .section-title h2:after{
+        bottom: -41px;
+    }
+    .gallery .section-title{
+        padding-bottom: 50px;
+    }
 }
